--- a/letter-text.html
+++ b/letter-text.html
@@ -1,4 +1,13 @@
-Dr. Eleanor Gaye
+<!--
+	Name: Nibin Sha
+	File: Assignment 1 - HTML Overview
+	Date: 20 September 2023
+-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+<br>Dr. Eleanor Gaye
 Awesome Science faculty
 University of Awesome
 Bobtown, CA 99999,
